fixed UserMeunu and appbar bugs relates #112

--- a/client/src/components/common/AppBar/style.css
+++ b/client/src/components/common/AppBar/style.css
@@ -1,7 +1,7 @@
-.root{
+.app-bar{
   position: fixed;
 }
-.toolbar{
+.app-bar__toolbar{
   background-color: white;
   justify-content: space-between;
 }
