--- a/client/src/components/pages/application/Signup/index.css
+++ b/client/src/components/pages/application/Signup/index.css
@@ -1,32 +1,45 @@
-*{
+* {
   margin: 0;
 }
+
 .container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
 }
-.signupImg{
-  width:40rem;
+
+.signupImg {
+  width: 40rem;
   height: 30rem;
 }
-.signForm{
+
+.signForm {
   height: 1.8rem;
   width: 20rem;
   line-height: 0;
 }
-.card_sign__head{
+
+.message {
+  width: 85%;
+  margin: 0 auto;
+  margin-top: .8rem;
+
+}
+
+.card_sign__head {
   width: 80%;
   margin: 0 auto;
 }
-.right__content{
+
+.right__content {
   padding: 3rem 5rem 0 5rem;
 }
-.buttons{
+
+.buttons {
   display: flex;
   justify-content: space-around;
   width: 90%;
   margin: 0 auto;
-  margin-top: 2rem;
+  margin-top: .5rem;
 }
