--- a/client/src/components/application/SelectBox/style.css
+++ b/client/src/components/application/SelectBox/style.css
@@ -1,7 +1,10 @@
     #demo-simple-select-outlined-label {
+      margin: 1rem;
       line-height: 0;
     }
    .select-box {
+    margin: 1rem 1rem 0 1rem;
+    height: 2.5rem;
     width: 20rem;
-    height: 2.2rem;
+    line-height: 0;
   }
