fixed styling issues relates #25

--- a/client/src/components/pages/common/Home/index.css
+++ b/client/src/components/pages/common/Home/index.css
@@ -1,12 +1,10 @@
-.root{
+.home{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 6.25rem;
   flex-wrap: wrap;
-  width: auto;
-
 }
 
 .img{
