fixed nonlinear stepper component relates #116

--- a/client/src/components/application/SelectBox/style.css
+++ b/client/src/components/application/SelectBox/style.css
@@ -1,7 +1,11 @@
-    #demo-simple-select-outlined-label {
+    /* #demo-simple-select-outlined-label {
       line-height: 0;
     }
    .select-box {
     width: 20rem;
     height: 2.2rem;
+  } */
+
+  .select-box {
+    margin-top: 1rem;
   }
