--- a/client/src/components/pages/common/errors/Error-404/index.css
+++ b/client/src/components/pages/common/errors/Error-404/index.css
@@ -1,21 +1,74 @@
-*{
-  margin: 0;
-}
-.error_404{
-  width: 100%; 
-  height: 99vh; 
-} 
-.link {
-  width: 15rem;
-  position: fixed;
-  top: 53%;
-  right:45%;
-  left: 45%;
+
+
+.notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 35rem;
+  width: 100%;
+  line-height: 1.4;
   text-align: center;
-  color: #e90dd6 !important;
-  font-size: 2rem;
-  text-decoration: none;
+}
+
+.notfound-404 {
+  position: relative;
+  height: 13rem;
+  margin: 0 auto 1.5rem;
+  z-index: -1;
+}
+
+ .h1 {
+  font-family: monospace;
   font-weight: 800;
-  border: 0.1rem solid black;
-  border-radius: 10rem;
+  font-style: normal;
+  text-transform: uppercase;
+  margin: 0;
+  color: #211b19;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+ .h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #211b19;
+  background: #fff;
+  padding: 0.1rem;
+  margin: auto;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.link {
+  font-family: 'Montserrat', sans-serif;
+  display: inline-block;
+  font-weight: 700;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 0.9rem 1.3rem;
+  background: #ff6300;
+  font-size: 1.2rem;
+  transition: 0.2s all;
+  cursor: pointer;
+  border-radius: 2rem;
+}
+
+.link:hover {
+  color: #ff6300;
+  background: #211b19;
+}
+
+@media only screen and (max-width: 480px) {
+ .notfound-404 {
+    height: 15rem;
   }
+
+}
