--- a/client/src/components/pages/application/Signup/index.css
+++ b/client/src/components/pages/application/Signup/index.css
@@ -19,18 +19,20 @@
   width: 20rem;
   line-height: 0;
 }
-.signForm input{
+
+.signForm input {
   height: .5rem;
 }
-.signForm label{
+
+.signForm label {
   line-height: .5;
 }
+
 .message {
   width: 85%;
   height: 1.5rem;
   margin: 0 auto;
   margin-top: .8rem;
-
 }
 
 .card_sign__head {
@@ -48,4 +50,22 @@
   width: 90%;
   margin: 0 auto;
   margin-top: .5rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    display: block;
+  }
+  .signupImg {
+    width: 25rem;
+    height: auto;
+    padding-top: 4rem;
+  }
+  .right__content {
+    padding: 0;
+  }
+  .signForm {
+    width: 15rem;
+  }
+
 }
