bring back component styles relates #116

--- a/client/src/components/application/SelectBox/style.css
+++ b/client/src/components/application/SelectBox/style.css
@@ -1,6 +1,6 @@
-    .MuiFormControl-root{
+    /* .MuiFormControl-root{
       width: 100%;
-    }
+    } */
     #demo-simple-select-outlined-label {
       margin: 1rem;
       line-height: 0;
