--- a/client/src/components/pages/application/Steps/style.css
+++ b/client/src/components/pages/application/Steps/style.css
@@ -2,7 +2,17 @@
   background-color: rgb(245, 245, 245);
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.Container_page__content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .backGround {
   position: absolute;
   z-index: 0;
@@ -10,16 +20,23 @@
   height: 70vh;
   right: 2%;
 }
+
 .text_Welcome {
-  position: absolute;
-  top: 15%;
-  right: 40%;
+  padding-top: .2rem;
+  align-self: center;
   color: rgb(255, 123, 0);
 }
-.container_buttons {
-  display: flex;
-  justify-content: space-around;
-  width: 90%;
-  margin: 0 auto;
-  margin-top: 1.5rem;
+
+.steps_buttons {
+  align-self: flex-end;
+}
+
+.steps {
+  padding-top: 4rem;
+  min-height: 20rem;
+}
+
+.steps__list {
+  margin-top: 1rem;
+  list-style: none;
 }
