change page layout with limitation and change the app route and add the left drawer beside fix some bugs in use effect in list file #34

--- a/client/src/components/pages/application/Steps/style.css
+++ b/client/src/components/pages/application/Steps/style.css
@@ -22,7 +22,6 @@
 }
 
 .text_Welcome {
-  padding-top: .2rem;
   align-self: center;
   color: rgb(255, 123, 0);
 }
@@ -32,8 +31,8 @@
 }
 
 .steps {
-  padding-top: 4rem;
-  min-height: 20rem;
+  padding-top: 3rem;
+  height: 20rem;
 }
 
 .steps__list {
