--- a/client/src/components/pages/application/Tasks/index.css
+++ b/client/src/components/pages/application/Tasks/index.css
@@ -1,12 +1,11 @@
-.tasks-container{
-  margin-top:15vh;
-margin-left:25vw;
-margin-bottom:10vh;
-width:60vw;
-
+.tasks-container {
+  margin-top: 15vh;
+  margin-left: 25vw;
+  margin-bottom: 10vh;
+  width: 60vw;
 }
 
-.tasks-title{
+.tasks-title {
   color: rgb(255, 123, 0);
 }
 
@@ -18,18 +17,18 @@ width:60vw;
   right: 2%;
 }
 
-.tasks_buttons{
-  width:25rem;
+.tasks_buttons {
+  width: 25rem;
   margin-top: 3rem;
   margin-left: 15vw;
-  display:flex;
+  display: flex;
   justify-content: space-around;
 }
 
-.tasks-paragraph{
+.tasks-paragraph {
   margin-left: 2.5rem;
   margin-bottom: 2rem;
-  background-color: rgb(230,230,230);
+  background-color: rgb(230, 230, 230);
   border-radius: 10px;
-  padding:0.5rem;
+  padding: 0.5rem;
 }
