--- a/client/src/components/pages/application/Tasks/index.css
+++ b/client/src/components/pages/application/Tasks/index.css
@@ -32,3 +32,9 @@
   border-radius: 10px;
   padding: 0.5rem;
 }
+.loading{
+  min-height: 10rem;
+  width: 12%;
+  margin: 0 auto;
+  margin-top: 15%;
+}
