--- a/client/src/components/pages/application/Tasks/index.css
+++ b/client/src/components/pages/application/Tasks/index.css
@@ -11,7 +11,7 @@
 
 .tasks-background {
   position: fixed;
-  z-index: 0;
+  z-index: -1;
   top: 20%;
   height: 70vh;
   right: 2%;
@@ -28,11 +28,11 @@
 .tasks-paragraph {
   margin-left: 2.5rem;
   margin-bottom: 2rem;
-  background-color: rgb(230, 230, 230);
+  background-color: white;
   border-radius: 10px;
   padding: 0.5rem;
 }
-.loading{
+.loading {
   min-height: 10rem;
   width: 12%;
   margin: 0 auto;
