--- a/client/src/components/pages/application/Accounts/index.css
+++ b/client/src/components/pages/application/Accounts/index.css
@@ -18,12 +18,7 @@
   color: rgb(255, 123, 0);
 }
 .Form_container {
-  position: absolute;
-  top: 20%;
-  right: 30%;
-  margin-top: 1.5rem;
-  padding-top: 2%;
-  height: 2.7rem;
+  margin-top: 10%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -69,7 +64,12 @@
 .check_box{
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  width: 80%;
+  width: 24rem;
   padding-left: 5%;
+}
+
+.check_box p{
+  padding: 0;
+  margin-top: 1rem;
+  font-weight: bolder;
 }
