add project info and checkbox #31

--- a/client/src/components/pages/application/Availability/index.css
+++ b/client/src/components/pages/application/Availability/index.css
@@ -9,6 +9,9 @@
 .availability__head {
   margin: 0 0 1rem -2rem;
 }
+.nonlinearSelect{
+  width: 31.5rem;
+}
 
 .availability__buttons {
   display: flex;
