--- a/client/src/components/pages/application/Profile/index.css
+++ b/client/src/components/pages/application/Profile/index.css
@@ -1,3 +1,17 @@
+.Container_page_profile {
+  height: auto;
+  margin: 0;
+  
+}
+
+.profile {
+  bottom: 1;
+}
+
+.Profile__container {
+  margin: 4rem 0 1rem 0;
+}
+
 .profileImage {
   position: absolute;
   left: 0;
@@ -9,6 +23,10 @@
   margin-left: 2rem;
 }
 
+.profile__btn {
+  line-height: 5rem;
+}
+
 .Profile__avatar {
   width: 6rem;
   height: 6rem;
@@ -18,7 +36,7 @@
 .Profile__table {
   text-align: center;
   margin: 0 auto;
-  width: 85%;
+  width: 90%;
   line-height: 2rem;
 }
 
