--- a/client/src/components/pages/application/Project/style.css
+++ b/client/src/components/pages/application/Project/style.css
@@ -57,6 +57,7 @@
   justify-content: space-around;
   width: 90%;
   margin: 0 auto;
+  margin-top: 1.2rem;
 }
 .text_area {
     height: 200px;
@@ -69,4 +70,10 @@
     width: 31.7rem;
     margin-left: 16px;
     border-radius: 5px; 
+}
+.MuiFormHelperText-root.Mui-error {
+  color: #f44336;
+  position: absolute;
+  top: 69%;
+  right: 67%;
 }
