--- a/client/src/components/pages/application/Tasks/index.css
+++ b/client/src/components/pages/application/Tasks/index.css
@@ -3,8 +3,20 @@
   margin-left: 25vw;
   margin-bottom: 10vh;
   width: 60vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
-
+.task_container_field {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.task_container_field input {
+  height: 0.3rem;
+  background-color: rgb(255, 255, 255);
+  width: 30rem;
+}
 .tasks-title {
   color: rgb(255, 123, 0);
 }
@@ -39,20 +51,3 @@
   margin-top: 15%;
 }
 
-.tasks_input {
-  margin-top: 3rem;
-  margin-bottom: 4rem;
-}
-.tasks_input input {
-  width: 30rem;
-  background-color: white;
-}
-
-.custom-checkbox:checked {
-  margin: 9px;
-  background-color:#707070;
-
-  cursor: pointer;
-  height: 1rem;
-  width: 1rem;
-}
