--- a/client/src/components/pages/common/Home/index.css
+++ b/client/src/components/pages/common/Home/index.css
@@ -1,4 +1,4 @@
-.home{
+.home {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -7,7 +7,19 @@
   flex-wrap: wrap;
 }
 
-.img{
+.img {
   pointer-events: none;
   width: 22rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .img {
+    width: 40rem;
+    height: 40rem;
+  }
 }
