--- a/client/src/components/pages/application/Signup/index.css
+++ b/client/src/components/pages/application/Signup/index.css
@@ -1,8 +1,8 @@
 * {
   margin: 0;
 }
-
-.container {
+.sign_page {
+  width: 100vw;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -10,36 +10,53 @@
   align-items: flex-end;
 }
 
-.signupImg {
+.singImg {
   width: 40rem;
   height: 30rem;
 }
-
 .signForm {
-  height: 2.7rem;
+  height: 2.5rem;
   width: 20rem;
   line-height: 0;
 }
+.Extra {
+  margin: 0.6rem 0 1rem 0;
 
-.extra {
-  height: 2.7rem;
 }
 
-.signForm input {
-  height: .5rem;
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.signForm label {
-  line-height: .5;
+.form input {
+  height: 0.1rem;
+  background-color: rgb(255, 255, 255);
+  width: 20rem;
 }
 
+.Input_form {
+  height: 2.2rem;
+  background-color: rgb(255, 255, 255);
+  width: 20rem;
+}
+
+.Input_form label {
+  line-height: 0.5;
+  padding-bottom: 1.5rem;
+}
+.Input_form p {
+  font-size: 0.7rem;
+}
 .card_sign__head {
   width: 80%;
   margin: 0 auto;
 }
 
 .right__content {
-  padding: 3rem 5rem 0 5rem;
+  padding: 4rem 5rem 0 0;
 }
 
 .buttons {
@@ -49,21 +66,42 @@
   margin: 0 auto;
   margin-top: .5rem;
 }
+@media only screen and (max-width: 1150px) {
+  .singImg {
+    width: 30rem;
+    height: 30rem;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  .singImg {
+    width: 20rem;
+    height: 30rem;
+  }
+}
+@media only screen and (max-width: 880px) {
+  .singImg {
+    width: 15rem;
+    height: 30rem;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .singImg {
+ display: none;
+  }
+}
 
 @media only screen and (max-width: 600px) {
-  .container {
-    padding: 2rem 0rem 0rem 5rem;
-    align-items: stretch;
-    justify-content: center;
-    flex-wrap: nowrap;
-    flex-direction: column;
-  }
-  .signupImg {
+  .singImg {
     display: none;
   }
   .right__content {
-    align-self: center;
-    padding-top: 1rem;
+    width: 100vw;
+    height: 90vh;
+   position: absolute;
+   top: 10%;
+   padding:1rem;
   }
   .signForm {
     max-width: 20rem;
