--- a/client/src/components/pages/common/Login/index.css
+++ b/client/src/components/pages/common/Login/index.css
@@ -1,12 +1,3 @@
-.WelcomeImg {
-  width: 40rem;
-  height: 30rem;
-}
-.button_login {
+.Extra_login {
   padding-top: 2rem;
-}
-@media only screen and (max-width: 600px) {
-  .WelcomeImg {
-    display: none;
-  }
 }
