--- a/client/src/components/pages/application/Steps/style.css
+++ b/client/src/components/pages/application/Steps/style.css
@@ -1,7 +1,7 @@
 
 .Container_page {
   background-color: rgb(245, 245, 245);
-  widows: 100%;
+  width: 100%;
   height: 90vh;
   display: flex;
   justify-content: center;
