--- a/client/src/components/pages/application/Submit/index.css
+++ b/client/src/components/pages/application/Submit/index.css
@@ -1,21 +1,4 @@
-.Container_page {
-  background-color: rgb(245, 245, 245);
-  width: 100vw;
-  height: 100vh;
-}
-.backGround {
-  position: absolute;
-  z-index: 0;
-  top: 20%;
-  height: 70vh;
-  right: 2%;
-}
-.text_Welcome {
-  position: absolute;
-  top: 15%;
-  right: 40%;
-  color: rgb(255, 123, 0);
-}
+
 .text_submit {
   position: absolute;
   top: 35%;
@@ -23,9 +6,106 @@
 }
 .submit_buttons {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-evenly;
-  width: 40%;
+  justify-content: space-around;
+  width: 90%;
   margin: 0 auto;
-  margin-top: 1.5rem;
+  margin-top: 5rem;
+  z-index: 3;
+}
+.Extra_Submit {
+  align-self: flex-start;
+  margin-top: 10rem;
+  margin-left: 3%;
+}
+.container_page_submit {
+  background-color: rgba(245, 245, 245, 0.411);
+  display: flex;
+  flex-direction: column;
+  width: 32rem;
+  z-index: 1;
+}
+.Container_Submitted_finished {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
+}
+.text_Submitted_finished {
+  margin: 1rem;
+  color: rgb(255, 94, 0);
+}
+@media only screen and (max-width: 1150px) {
+  
+  .container_page_submit {
+    padding-right: 0%;
+    margin-left: 10%;
+    width: 32rem;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  
+  .container_page_submit {
+    padding-right: 0%;
+    margin-left: 20%;
+    width: 32rem;
+  }
+}
+@media only screen and (max-width: 960px) {
+  .container_page_submit {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    margin-left: 30%;
+    width: 32rem;
+  }
+  
+}
+
+@media only screen and (max-width: 870px) {
+  .container_page_submit {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    margin-left: 30%;
+    width: 25rem;
+  }
+  
+}
+
+@media only screen and (max-width: 790px) {
+  .container_page_submit {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    margin-left: 40%;
+    width: 20rem;
+  }
+  
+}
+@media only screen and (max-width: 640px) {
+  .container_page_submit {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    margin-left: 40%;
+    width: 15rem;
+  }
+  
+}
+@media only screen and (max-width: 610px) {
+  .container_page_submit {
+    background-color: rgba(245, 245, 245, 0.699);
+    display: flex;
+    flex-direction: column;
+    padding-right: 5%;
+    padding-left: 5%;
+    margin-left: 0;
+    width: 35rem;
+  }
+  
 }
