--- a/client/src/components/pages/application/Availability/index.css
+++ b/client/src/components/pages/application/Availability/index.css
@@ -27,3 +27,77 @@
   justify-content: flex-start;
   margin: 5rem 0 0 -12rem;
 }
+
+.Container_page__availability {
+  background-color: rgba(245, 245, 245, 0.411);
+  display: flex;
+  flex-direction: column;
+  width: 32rem;
+  z-index: 1;
+  margin-top: 5rem;
+}
+
+@media only screen and (max-width: 1150px) {
+  .Container_page__availability {
+    margin-left: 2%;
+    width: 32rem;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  .Container_page__availability {
+    padding-right: 0%;
+    margin-left: 1%;
+    width: 32rem;
+  }
+}
+@media only screen and (max-width: 960px) {
+  .Container_page__availability {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    width: 32rem;
+  }
+}
+
+@media only screen and (max-width: 870px) {
+  .Container_page__availability {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    width: 25rem;
+  }
+}
+
+@media only screen and (max-width: 790px) {
+  .Container_page__availability {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    width: 20rem;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .Container_page__availability {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    width: 15rem;
+  }
+}
+@media only screen and (max-width: 610px) {
+  .Container_page__availability {
+    background-color: rgba(245, 245, 245, 0.699);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    padding-left: 0%;
+    margin-left: 1rem;
+    width: 25rem;
+    margin-top: 2rem;
+  }
+}
