--- a/client/src/components/pages/application/Accounts/index.css
+++ b/client/src/components/pages/application/Accounts/index.css
@@ -1,11 +1,4 @@
 
-.Form_container {
-  margin: 2% 0 0 0;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
 .Form_container input {
   height: 0.3rem;
   background-color: rgb(255, 255, 255);
@@ -62,4 +55,92 @@
   padding: 0;
   margin-top: 1rem;
   font-weight: bolder;
+}
+
+.Container_page__accounts {
+  background-color: rgba(245, 245, 245, 0.411);
+  display: flex;
+  flex-direction: column;
+  padding-right: 10%;
+  width: 32rem;
+  z-index: 1;
+}
+@media only screen and (max-width: 1150px) {
+ 
+  .Container_page__accounts {
+    padding-right: 0%;
+    margin-left: 10%;
+    width: 32rem;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+ 
+  .Container_page__accounts {
+    padding-right: 0%;
+    margin-left: 20%;
+    width: 32rem;
+  }
+}
+@media only screen and (max-width: 960px) {
+  .Container_page__accounts {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    margin-left: 30%;
+    width: 32rem;
+    z-index: 1;
+  }
+ 
+}
+
+@media only screen and (max-width: 870px) {
+  .Container_page__accounts {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    margin-left: 30%;
+    width: 25rem;
+    z-index: 1;
+  }
+ 
+}
+
+@media only screen and (max-width: 790px) {
+  .Container_page__accounts {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    margin-left: 40%;
+    width: 20rem;
+    z-index: 1;
+  }
+ 
+}
+@media only screen and (max-width: 640px) {
+  .Container_page__accounts {
+    background-color: rgba(245, 245, 245, 0.411);
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    margin-left: 40%;
+    width: 15rem;
+    z-index: 1;
+  }
+ 
+}
+@media only screen and (max-width: 610px) {
+  .Container_page__accounts {
+    background-color: none;
+    display: flex;
+    flex-direction: column;
+    padding-right: 0%;
+    padding-left: 0%;
+    margin-left: 0;
+    width: 25rem;
+  }
+  
 }
