--- a/client/src/components/pages/application/Tasks/index.css
+++ b/client/src/components/pages/application/Tasks/index.css
@@ -23,7 +23,7 @@
 .tasks-paragraph {
   margin-left: 2.5rem;
   margin-bottom: 2rem;
-  background-color: rgba(245, 245, 245, 0.411);;
+  background-color: rgba(245, 245, 245, 0.411);
   border-radius: 10px;
   padding: 0.5rem;
 }
