change the end point in backend and get the submitted applications and change some style on table #51

--- a/client/src/components/pages/admin/Submitted_all/index.css
+++ b/client/src/components/pages/admin/Submitted_all/index.css
@@ -7,7 +7,8 @@
 }
 
 .submitted__container td{
-  line-height: .8rem;
+  line-height: 1rem;
+  padding: .5rem 1rem .5rem 1rem;
 }
 .submitted__container tr{
   margin: 0 auto;
