--- a/client/src/components/pages/application/Submit/index.css
+++ b/client/src/components/pages/application/Submit/index.css
@@ -12,15 +12,11 @@
   margin-top: 5rem;
   z-index: 3;
 }
-.Extra_Submit {
-  align-self: flex-start;
-  margin-top: 10rem;
-  margin-left: 3%;
-}
-.container_page_submit {
+.container_submit_page {
   background-color: rgba(245, 245, 245, 0.411);
   display: flex;
   flex-direction: column;
+  margin-top: 5%;
   width: 32rem;
   z-index: 1;
 }
@@ -36,7 +32,7 @@
 }
 @media only screen and (max-width: 1150px) {
   
-  .container_page_submit {
+  .container_submit_page {
     padding-right: 0%;
     margin-left: 10%;
     width: 32rem;
@@ -45,14 +41,14 @@
 
 @media only screen and (max-width: 1050px) {
   
-  .container_page_submit {
+  .container_submit_page {
     padding-right: 0%;
     margin-left: 20%;
     width: 32rem;
   }
 }
 @media only screen and (max-width: 960px) {
-  .container_page_submit {
+  .container_submit_page {
     background-color: rgba(245, 245, 245, 0.411);
     display: flex;
     flex-direction: column;
@@ -64,7 +60,7 @@
 }
 
 @media only screen and (max-width: 870px) {
-  .container_page_submit {
+  .container_submit_page {
     background-color: rgba(245, 245, 245, 0.411);
     display: flex;
     flex-direction: column;
@@ -76,7 +72,7 @@
 }
 
 @media only screen and (max-width: 790px) {
-  .container_page_submit {
+  .container_submit_page {
     background-color: rgba(245, 245, 245, 0.411);
     display: flex;
     flex-direction: column;
@@ -87,7 +83,7 @@
   
 }
 @media only screen and (max-width: 640px) {
-  .container_page_submit {
+  .container_submit_page {
     background-color: rgba(245, 245, 245, 0.411);
     display: flex;
     flex-direction: column;
@@ -98,7 +94,7 @@
   
 }
 @media only screen and (max-width: 610px) {
-  .container_page_submit {
+  .container_submit_page {
     background-color: rgba(245, 245, 245, 0.699);
     display: flex;
     flex-direction: column;
@@ -106,6 +102,7 @@
     padding-left: 5%;
     margin-left: 0;
     width: 35rem;
+    margin-top: 1%;
   }
   
 }
