--- a/client/src/components/pages/application/Tasks/index.css
+++ b/client/src/components/pages/application/Tasks/index.css
@@ -31,6 +31,11 @@
 .Task_container_page h6{
   font-size: 1.5rem;
 }
+.Task_container_page input {
+  height: 0.3rem;
+  background-color: rgb(255, 255, 255);
+  width: 30rem;
+}
 
 @media only screen and (max-width: 1150px) {
  
@@ -104,10 +109,15 @@
     background-color: rgba(245, 245, 245, 0.699);
     display: flex;
     flex-direction: column;
-    width: 30rem;
+    width: 23rem;
     z-index: 1;
-    margin-left: 10rem;
-    padding-right: 10%;
+    margin-left: 0;
+    padding-right: 0%;
     margin-top: 2rem;
+  }
+  .Task_container_page input {
+    height: 0.3rem;
+    background-color: rgb(255, 255, 255);
+    width: 20rem;
   }
 }
