added style for limitaiton in steps page

--- a/client/src/components/pages/application/Steps/style.css
+++ b/client/src/components/pages/application/Steps/style.css
@@ -117,7 +117,10 @@
     color: rgb(255, 123, 0);
   }
 }
-
+.steps_loading {
+  position: fixed;
+  left: 50%;
+}
 @media only screen and (max-width: 790px) {
   .Container_page__content {
     background-color: rgba(245, 245, 245, 0.411);
