--- a/client/src/components/pages/admin/Submitted_Id/index.css
+++ b/client/src/components/pages/admin/Submitted_Id/index.css
@@ -8,10 +8,21 @@
   display: flex;
   justify-content: space-around;
 }
-
+.Extra_page_profile{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-image: url('../../../../assets/images/dashbackground.png');
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  background-attachment: fixed;
+}
 .dashboard_page_admin {
-  width: 100vw;
-  height: 253vh;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
