--- a/client/src/components/application/NonlinearStepper/style.css
+++ b/client/src/components/application/NonlinearStepper/style.css
@@ -106,6 +106,11 @@
   text-align: left;
 }
 
+.general_selects{
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
 
 @media only screen and (max-width: 1150px) {
 
